--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install",
+    "check-format": "prettier --check .",
+    "check-types": "tsc --pretty --noEmit",
+    "format": "prettier --write .",
+    "test-all": "yarn check-format && yarn lint && yarn check-types && next build"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
@@ -39,7 +44,8 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.4.0",
     "tailwindcss": "^3.1.6",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "husky": "^8.0.0"
   },
   "ct3aMetadata": {
     "initVersion": "6.3.0"
